--- a/app/views/public/pages/la_boutique/_section_boutique.html.erb
+++ b/app/views/public/pages/la_boutique/_section_boutique.html.erb
@@ -1,5 +1,5 @@
 <!-- Section Boutique - Présentation -->
-<section class="py-5 my-4" data-aos="fade-up" data-aos-duration="800">
+<section class="py-5 my-4">
   <!-- Section 1: Texte + Image -->
   <%= image_text_section(
     image1: "cat_tenues_soiree.jpg",
