--- a/app/views/public/pages/la_boutique/_section_map.html.erb
+++ b/app/views/public/pages/la_boutique/_section_map.html.erb
@@ -1,5 +1,5 @@
 <!-- Section Carte -->
-<section class="py-5 my-4" data-aos="fade-up" data-aos-duration="800">
+<section class="py-5 my-4">
   <div class="container">
     <div class="row mb-5">
       <div class="col-12 text-center">
