--- a/app/views/public/pages/la_boutique/_section_rdv.html.erb
+++ b/app/views/public/pages/la_boutique/_section_rdv.html.erb
@@ -1,6 +1,6 @@
 <div class="bg-white text-dark m-0">
   <!-- Section Bouton Rendez-vous -->
-  <section class="py-5 mt-0" data-aos="fade-up" data-aos-duration="800">
+  <section class="py-5 mt-0">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12 col-lg-8 text-center">
