--- a/app/views/public/pages/la_boutique/_section_references.html.erb
+++ b/app/views/public/pages/la_boutique/_section_references.html.erb
@@ -1,10 +1,10 @@
 <!-- Section Références -->
-<section class="py-5 my-4" data-aos="fade-up" data-aos-duration="800">
+<section class="py-5 my-4">
   <div class="container-fluid">
     <div class="row mb-5">
       <div class="col-12 text-center">
         <h2 class="text-light mb-3" style="font-family: 'Playfair Display', serif; font-size: 2.5rem;">Ils nous font confiance</h2>
-        <p class="text-light opacity-75" style="font-size: 1.1rem;">Des établissements prestigieux nous font confiance</p>
+        <p class="text-light" style="font-size: 1.1rem;">Des établissements prestigieux nous font confiance</p>
       </div>
     </div>
     
