--- a/app/views/public/pages/_carousel.html.erb
+++ b/app/views/public/pages/_carousel.html.erb
@@ -8,7 +8,7 @@
       
       <% if produit.video1.attached? %>
         <div class="carousel-item active" style="cursor: pointer;" role="button" data-bs-toggle="modal" data-bs-target="#modalProduit_<%= produit.id %>">
-          <video autoplay loop muted playsinline class="d-block w-100 <%= carousel_class %>"
+          <video autoplay loop muted playsinline class="d-block w-100"
           src="<%= url_for(produit.video1) %>"
           type="<%= produit.video1.content_type %>">
           Votre navigateur ne prend pas en charge la lecture de vidéos.
@@ -16,12 +16,12 @@
         </div>
         <% slide_index += 1 %>
         <div class="carousel-item">
-          <%= image_tag(produit.default_image_white, class: "img-fluid rounded-0 w-100", alt: produit.nom, style: "cursor: pointer;", role: "button", data: { bs_toggle: "modal", bs_target: "#modalProduit_#{produit.id}" }) %>
+          <%= image_tag(produit.default_image_white, class: "d-block w-100 rounded-0", alt: produit.nom, style: "cursor: pointer;", role: "button", data: { bs_toggle: "modal", bs_target: "#modalProduit_#{produit.id}" }) %>
         </div>
         <% slide_index += 1 %>
       <% else %>
         <div class="carousel-item active">
-          <%= image_tag(produit.default_image_white, class: "img-fluid w-100", alt: produit.nom, style: "cursor: pointer;", role: "button", data: { bs_toggle: "modal", bs_target: "#modalProduit_#{produit.id}" }) %>
+          <%= image_tag(produit.default_image_white, class: "d-block w-100", alt: produit.nom, style: "cursor: pointer;", role: "button", data: { bs_toggle: "modal", bs_target: "#modalProduit_#{produit.id}" }) %>
         </div>
         <% slide_index += 1 %>
       <% end %>
@@ -29,7 +29,7 @@
       <% if produit.images %>
         <% produit.images.each_with_index do |image, img_index| %>
           <div class="carousel-item">
-            <%= image_tag(image, class: "img-fluid w-100", alt: produit.nom, style: "cursor: pointer;", role: "button", data: { bs_toggle: "modal", bs_target: "#modalProduit_#{produit.id}", gallery_index: img_index }) %>
+            <%= image_tag(image, class: "d-block w-100", alt: produit.nom, style: "cursor: pointer;", role: "button", data: { bs_toggle: "modal", bs_target: "#modalProduit_#{produit.id}", gallery_index: img_index }) %>
           </div>
           <% slide_index += 1 %>
         <% end %>
