--- a/app/views/public/pages/la_boutique.html.erb
+++ b/app/views/public/pages/la_boutique.html.erb
@@ -1,11 +1,8 @@
-<%= page_header("La boutique de Cannes", "Découvrez notre équipe et notre boutique", image1: "cat_costume.jpg", image2: "cat_robes_mariees.jpg") %>
-
-<!-- Section vidéo avec titre, texte et liens -->
-<%= render 'public/pages/la_boutique/video_section'%>
+<%= page_header("La boutique de Cannes", "Découvrez notre équipe et notre boutique", image1: "dessin1.png", image2: "dessin3.png") %>
 
 <div class="public-main-content">
   <%= render partial: "public/pages/la_boutique/section_boutique" %>
-  <%= render partial: "public/pages/la_boutique/section_equipe" %>
+  <%= render partial: "public/pages/la_boutique/section_public_cards" %>
   <%= render partial: "public/pages/la_boutique/section_references" %>
   <%= render partial: "public/pages/la_boutique/section_infos" %>
   <%= render partial: "public/pages/la_boutique/section_rdv" %>
