--- a/app/views/public/pages/la_boutique.html.erb
+++ b/app/views/public/pages/la_boutique.html.erb
@@ -1,4 +1,4 @@
-<%= page_header("La boutique de Cannes", "Découvrez notre équipe et notre boutique", image1: "dessin1.png", image2: "dessin3.png") %>
+<%= page_header("La boutique de Cannes", "Découvrez notre équipe et notre boutique", image1: "dessin1b.png", image2: "dessin3.png") %>
 
 <div class="public-main-content">
   <%= render partial: "public/pages/la_boutique/section_boutique" %>
