--- a/app/views/public/shared/_section_categories.html.erb
+++ b/app/views/public/shared/_section_categories.html.erb
@@ -6,7 +6,8 @@
       items: ["Courtes", "Longues"],
       url: produits_filter_url(category_names: ["robes de mariée courtes", "robes de mariée longues"]),
       image: "cat_robes_mariees.jpg",
-      subtitle: "Découvrez notre sélection de robes de mariée courtes et longues pour votre jour spécial"
+      subtitle: "Découvrez notre sélection de robes de mariée courtes et longues pour votre jour spécial",
+      image_position: "center"
     ) %>
   </div>
 
@@ -16,7 +17,8 @@
       items: ["Longues", "Courtes", "Ensembles pantalon", "Combinaisons"],
       url: produits_filter_url(category_names: ["robes courtes", "robes longues", "ensembles pantalons"]),
       image: "cat_tenues_soiree.jpg",
-      subtitle: "Explorez notre collection de tenues de soirée élégantes pour toutes vos occasions"
+      subtitle: "Explorez notre collection de tenues de soirée élégantes pour toutes vos occasions",
+      image_position: "top"
     ) %>
   </div>
 
@@ -26,7 +28,8 @@
       items: ["Smokings", "Cérémonies", "Enfant"],
       url: produits_filter_url(category_names: "costume"),
       image: "cat_costume.jpg",
-      subtitle: "Parcourez notre gamme de costumes et smokings pour hommes de toutes tailles"
+      subtitle: "Parcourez notre gamme de costumes et smokings pour hommes de toutes tailles",
+      image_position: "top"
     ) %>
   </div>
 
@@ -36,7 +39,8 @@
       items: ["Chaussures Homme", "Chaussures Femmes", "Accessoires Hommes", "Accessoires Femmes"],
       url: produits_filter_url(category_names: ["chaussures", "accessoires"]),
       image: "cat_accessoires.jpg",
-      subtitle: "Complétez votre tenue avec nos chaussures et accessoires soigneusement sélectionnés"
+      subtitle: "Complétez votre tenue avec nos chaussures et accessoires soigneusement sélectionnés",
+      image_position: "center"
     ) %>
   </div>
 
