simplify scroll scroll animations and remove some for the moment

--- a/app/views/public/pages/home/_coups_de_coeur.html.erb
+++ b/app/views/public/pages/home/_coups_de_coeur.html.erb
@@ -1,7 +1,7 @@
 <% if @coups_de_coeur&.any? %>
   <div class="container-fluid px-0 my-5 py-5">
     <div class="container">
-      <div class="section-title-wrapper py-4 mb-3" data-aos="title-underline">
+      <div class="section-title-wrapper py-4 mb-3" data-aos="title-underline" data-scroll-reveal>
         <h2 class="text-light fs-3 text-uppercase section-title" style="position: relative; display: inline-block;">
           Nos coups de cœur
           <span class="section-title-underline" style="background: white;"></span>
