--- a/app/views/public/pages/le_concept.html.erb
+++ b/app/views/public/pages/le_concept.html.erb
@@ -77,7 +77,7 @@ image2: "https://images.pexels.com/photos/2122361/pexels-photo-2122361.jpeg") %>
           </h2>
         </div>
         <div class="row g-4">
-          <div class="col-lg-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-3 col-md-6 d-flex">
             <%= public_card(
               icon: "1-circle-fill",
               title: "Parcourez",
@@ -88,7 +88,7 @@ image2: "https://images.pexels.com/photos/2122361/pexels-photo-2122361.jpeg") %>
             ) %>
           </div>
           
-          <div class="col-lg-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-3 col-md-6 d-flex">
             <%= public_card(
               icon: "2-circle-fill",
               title: "Réservez",
@@ -99,7 +99,7 @@ image2: "https://images.pexels.com/photos/2122361/pexels-photo-2122361.jpeg") %>
             ) %>
           </div>
           
-          <div class="col-lg-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-3 col-md-6 d-flex">
             <%= public_card(
               icon: "3-circle-fill",
               title: "Personnalisez",
@@ -110,7 +110,7 @@ image2: "https://images.pexels.com/photos/2122361/pexels-photo-2122361.jpeg") %>
             ) %>
           </div>
           
-          <div class="col-lg-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-lg-3 col-md-6 d-flex">
             <%= public_card(
               icon: "4-circle-fill",
               title: "Brillez",
