--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -36,7 +36,7 @@
     
     <%= render "public/shared/navbar" %>
 
-    <div class="public-scroll flex-grow-1 overflow-auto">
+    <div class="public-scroll flex-grow-1 overflow-auto" data-controller="scroll-reveal">
       <main class="public-content">
         <div id="flash" data-turbo-temporary>
           <%= render partial: "public/shared/flash" %>
