--- a/app/views/public/pages/home.html.erb
+++ b/app/views/public/pages/home.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: "public/pages/home/section_hero" %>
 
-<div class="container-fluid px-0 my-5 py-5">
+<div class="container-fluid px-0 my-5 py-5" data-scroll-reveal>
     <div class="container">
       <div class="section-title-wrapper py-4 mb-3" data-aos="title-underline">
         <h2 class="text-light fs-3 text-uppercase section-title" style="position: relative; display: inline-block;">Nos collections
@@ -12,7 +12,7 @@
 </div>
 
 
-<div class="my-5">
+<div class="my-5" data-scroll-reveal>
     <%= render partial: "public/pages/home/section_boutique" %>
 </div>
 
