--- a/app/views/public/pages/home/_section_boutique.html.erb
+++ b/app/views/public/pages/home/_section_boutique.html.erb
@@ -7,13 +7,13 @@
     <div class="row w-100">
       <!-- Sur mobile : card en haut, sur grand écran : card à droite -->
       <div class="col-12 col-lg-5 offset-lg-7">
-        <div data-boutique-text-scroll-target="card" class="card shadow-lg p-3 p-lg-4 my-3 my-lg-0" style="background-color: rgba(255, 255, 255, 0.9); border-radius: 4px;">
+        <div data-boutique-text-scroll-target="card" class="p-3 p-lg-4 my-3 my-lg-0" style="background-color: rgba(255, 255, 255, 0.4); border-radius: 1px;">
           <div class="text-end text-dark">
             <h2 data-boutique-text-scroll-target="item" class="display-5 fw-bold mb-3 text-dark">
               La boutique
             </h2>
             
-            <div data-boutique-text-scroll-target="item" class="mb-3 p-2 p-lg-3 bg-light rounded">
+            <div data-boutique-text-scroll-target="item" class="mb-3 p-2 p-lg-3 rounded">
               <p class="mb-0 text-dark">
                 Notre boutique de Cannes au cœur de la cote d'azur et de tous ses évènements prestigieux.             
               </p>
