--- a/app/views/public/pages/le_concept.html.erb
+++ b/app/views/public/pages/le_concept.html.erb
@@ -4,7 +4,7 @@ image2: "https://images.pexels.com/photos/2122361/pexels-photo-2122361.jpeg") %>
 
 <div class="public-main-content">
     <%= render partial: "public/pages/le_concept/section_introduction" %>
-  <div class="container-fluid">
+  <div class="container-fluid" data-scroll-reveal>
 
     <!-- Les trois piliers -->
     <div class="row g-4 my-5 py-4 bg-white">
