--- a/app/views/public/pages/produit.html.erb
+++ b/app/views/public/pages/produit.html.erb
@@ -10,7 +10,7 @@
       </div>
     <% end %>
     
-    <div class="row g-4 g-lg-5">
+    <div class="row g-4 g-lg-5" data-scroll-reveal>
       
       <!-- Image/Carousel Column - En haut sur mobile, 50% sur grand écran -->
       <div class="col-12 col-lg-7">
