--- a/app/views/public/pages/_produits_filtres.html.erb
+++ b/app/views/public/pages/_produits_filtres.html.erb
@@ -5,7 +5,7 @@
    is_single_category = params[:id].present? && !params[:id].is_a?(Array)
    is_multiple_categories = params[:id].is_a?(Array)
  %>
-  <div class="container-fluid mt-4 m-0">
+  <div class="container-fluid mt-4 m-0" data-scroll-reveal>
 
     <%= turbo_frame_tag :results, data: {turbo_action: 'advance'} do %>
       <div id="produits" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3 m-0 justify-content-center">
