--- a/app/views/public/pages/_vous_aimerez_aussi.html.erb
+++ b/app/views/public/pages/_vous_aimerez_aussi.html.erb
@@ -1,10 +1,10 @@
 <% if produits_similaires.any? %>
   <div class="container-fluid py-5 px-4">
-    <h2 class="text-light mb-4 fw-bold" style="font-family: 'Cormorant Garamond', serif; font-size: 2rem;">
+    <h2 class="text-light mb-4 fw-bold" style="font-family: 'Cormorant Garamond', serif; font-size: 2rem;" data-scroll-reveal>
       Vous aimerez aussi
     </h2>
   
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-2 m-0 justify-content-center">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-2 m-0 justify-content-center" data-scroll-reveal>
       <%= render partial: "public/pages/produit/produit", collection: produits_similaires %>
     </div>
 
