--- a/app/views/public/pages/home/_coups_de_coeur.html.erb
+++ b/app/views/public/pages/home/_coups_de_coeur.html.erb
@@ -8,7 +8,7 @@
         </h2>
       </div>
       
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3 m-0 justify-content-center">
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3 m-0 justify-content-center" data-scroll-reveal>
         <% @coups_de_coeur.each do |produit| %>
           <%= render partial: "public/pages/produit/produit", locals: { produit: produit } %>
         <% end %>
