--- a/app/views/public/pages/la_boutique/_section_boutique.html.erb
+++ b/app/views/public/pages/la_boutique/_section_boutique.html.erb
@@ -1,7 +1,7 @@
 <!-- Section Boutique - Présentation -->
 <section class="py-5 my-4">
   <!-- Section 1: Texte + Vidéo -->
-  <div class="container-fluid px-0">
+  <div class="container-fluid px-0" data-scroll-reveal>
     <div class="row g-0 align-items-stretch">
       <!-- Colonne Texte -->
       <div class="col-12 col-md-6 order-2 order-md-1 d-flex">
@@ -60,7 +60,7 @@
   ) %>
 
   <!-- Carousel des métiers de la boutique -->
-  <div class="container-fluid px-0 mt-4">
+  <div class="container-fluid px-0 mt-4" data-scroll-reveal>
     <div id="metiersCarousel" class="carousel slide" data-bs-ride="carousel">
       <!-- Indicateurs -->
       <div class="carousel-indicators">
