--- a/app/views/public/pages/la_boutique/_section_infos.html.erb
+++ b/app/views/public/pages/la_boutique/_section_infos.html.erb
@@ -2,14 +2,14 @@
 <!-- Section Informations pratiques -->
 <section class="py-5 mb-0">
   <div class="container">
-    <div class="row mb-5">
+    <div class="row mb-5" data-scroll-reveal>
       <div class="col-12 text-center">
         <h2 class="mb-3" style="font-family: 'Playfair Display', serif; font-size: 2.5rem;">Informations pratiques</h2>
         <p class="opacity-75" style="font-size: 1.1rem;">Toutes les informations pour nous rendre visite</p>
       </div>
     </div>
     
-    <div class="row g-4 justify-content-center">
+    <div class="row g-4 justify-content-center" data-scroll-reveal>
       <div class="col-12 col-md-6 col-lg-4 d-flex">
         <% contact_button = link_to('Nous écrire', "#{contact_path}#message-form", class: 'btn btn-outline-dark btn-sm public-btn-border-radius px-4') %>
         <% contact_content = "#{@texteContact}<div class='text-start mt-2'>#{contact_button}</div>" %>
