--- a/app/views/public/pages/la_boutique/_section_public_cards.html.erb
+++ b/app/views/public/pages/la_boutique/_section_public_cards.html.erb
@@ -4,7 +4,7 @@
     <section class="py-5 my-4">
       <div class="container">
         <!-- Cards avec les différents aspects de l'équipe -->
-        <div class="row g-4 justify-content-center">
+        <div class="row g-4 justify-content-center" data-scroll-reveal>
           <div class="col-12 col-md-4 col-lg-4 d-flex">
             <%= public_card(
               icon: "people-fill", 
