--- a/app/views/public/pages/la_boutique/_section_rdv.html.erb
+++ b/app/views/public/pages/la_boutique/_section_rdv.html.erb
@@ -3,7 +3,7 @@
   <section class="py-5 mt-0">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-12 col-lg-8 text-center">
+        <div class="col-12 col-lg-8 text-center" data-scroll-reveal>
           <div class="concept-card p-5">
             <h3 class="text-light mb-3" style="font-family: 'Playfair Display', serif; font-size: 2rem;">Prêt à nous rencontrer ?</h3>
             <p class="text-light opacity-75 mb-4" style="font-size: 1.1rem;">
