--- a/app/views/public/pages/la_boutique/_section_references.html.erb
+++ b/app/views/public/pages/la_boutique/_section_references.html.erb
@@ -1,7 +1,7 @@
 <!-- Section Références -->
 <section class="py-5 my-4">
   <div class="container-fluid">
-    <div class="row mb-5">
+    <div class="row mb-5" data-scroll-reveal>
       <div class="col-12 text-center">
         <h2 class="text-light mb-3" style="font-family: 'Playfair Display', serif; font-size: 2.5rem;">Ils nous font confiance</h2>
         <p class="text-light" style="font-size: 1.1rem;">Des établissements prestigieux nous font confiance</p>
