--- a/app/views/public/pages/nos_collections.html.erb
+++ b/app/views/public/pages/nos_collections.html.erb
@@ -13,7 +13,7 @@
 
 <%= render partial: "public/pages/section_carousel_collections" %>
 
-<div class="container my-5 py-5 text-center">
+<div class="container my-5 py-5 text-center" data-scroll-reveal>
   <%= link_to "Voir tous les produits", produits_index_url(subdomain: "shop"), class: "btn btn-light btn-lg px-5 public-btn-border-radius" %>
 </div>
 
