--- a/app/views/admin/produits/_produit.html.erb
+++ b/app/views/admin/produits/_produit.html.erb
@@ -70,7 +70,6 @@
                           title: 'Dupliquer' do %>
                       <i class="bi-copy me-1"></i>
                       <span class="">Dupliquer</span>
-                    
                     <% end %>
                   <% end %>  
                 <% end %>
@@ -138,6 +137,10 @@
             <% if current_admin_user.admin? %>
               <div id="produit_<%= produit.id %>_coup_de_coeur" class="px-2">
                 <%= render "admin/produits/coup_de_coeur_toggle", produit: produit %>
+              </div>
+              
+              <div class="px-2 mt-2">
+                <%= render "admin/produits/promotion_buttons", produit: produit %>
               </div>
             <% end %>
             
