--- a/app/views/public/pages/home.html.erb
+++ b/app/views/public/pages/home.html.erb
@@ -16,6 +16,8 @@
     <%= render partial: "public/pages/home/section_boutique" %>
 </div>
 
+<%= render partial: "public/pages/home/promotions" %>
+
 <%= render partial: "public/pages/home/coups_de_coeur" %>
 
 <!-- Call to action -->
